Check chunk ordering around IDATs